[package]
name = "m3u8"
authors = ["Cat"]
description = "Multi-threaded downloader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui = "0.18"
#crossterm = "0.23"
clap = { version = "3.1.14", features = ["derive"] }
reqwest = "*"
tokio = { version = "1", features = ["full"] }
#hyper = { version = "0.14", features = ["full"] }
thiserror = "*"

# build --release